methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:1: error: not found: value setColorBrosse
def b(c:Color){setColorBrosse(c);a();avance(2);a();recule();droite();avance();a;recule(2);a();avance();setColorBrosse(Color.YELLOW)}
               ^FlowerPot:1: error: not found: value setColorBrosse
def b(c:Color){setColorBrosse(c);a();avance(2);a();recule();droite();avance();a;recule(2);a();avance();setColorBrosse(Color.YELLOW)}
                                                                                                       ^FlowerPot:11: error: not enough arguments for method b: (c: java.awt.Color)Unit.
Unspecified value parameter c.
def growFlowers(){for (i<-1 to 4){b();droite();avance(4)}} 
                                   ^